--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -1,37 +1,20 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>{% block title %}Блогикум{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="{% url 'blog:index' %}">Блогикум</a>
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog:index' %}">Лента записей</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'pages:about' %}">О проекте</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'pages:rules' %}">Наши правила</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="container my-5">
-    {% block content %}{% endblock %}
-  </main>
-  <footer class="container-fluid bg-light">
-    <div class="container">
-      <p class="text-center">© Блогикум</p>
-    </div>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Блогикум{% endblock %}</title>
+    {% load static %}  
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  </head>
+  <body>
+    <header>
+      {% include 'includes/header.html' %}
+    </header>
+
+    <main class="container my-5">
+      {% block content %}{% endblock %}
+    </main>
+
+    {% include 'includes/footer.html' %}
+  </body>
 </html>
