--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,7 +1,25 @@
 {% extends 'base.html' %}
 
-{% block title %}Публикации в категории {{ category_slug }}{% endblock %}
+{% load static %}
+
+{% block title %}
+  Публикации в категории {{ category_slug }}
+{% endblock %}
 
 {% block content %}
   <h1>Публикации в категории {{ category_slug }}</h1>
+
+  {% if posts %}
+    <ul>
+      {% for post in posts %}
+        <li>
+          <a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a>
+          <p>{{ post.date }}</p>
+          <p>{{ post.location }}</p>
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>Публикации в этой категории отсутствуют.</p>
+  {% endif %}
 {% endblock %}
