--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}Подробная информация{% endblock %}
+{% load static %}  
+
+{% block title %}
+  Подробная информация
+{% endblock %}
 
 {% block content %}
-  <article>
-    <ul>
-      <li>Место: {{ post.location }}</li>
-      <li>Дата: {{ post.date }}</li>
-      <li>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a></li>
-    </ul>
-    <p>{{ post.text }}</p>
-  </article>
+  <h1>Подробности о посте</h1>
+  {% include 'includes/post_card.html' with post=post %}
+  <p>{{ post.text|linebreaksbr }}</p> 
 {% endblock %}
