--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Блогикум{% endblock %}</title>
-    {% load static %}  
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    {% load static %}
+
+    <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>{% block title %}Блогикум{% endblock %}</title>
   </head>
   <body>
     <header>
       {% include 'includes/header.html' %}
     </header>
 
-    <main class="container my-5">
-      {% block content %}{% endblock %}
+    <main>
+      <div class="container my-5">
+        {% block content %}{% endblock %}
+      </div>
     </main>
 
     {% include 'includes/footer.html' %}
   </body>
 </html>
+
