--- a/blogicum/templates/includes/footer.html
+++ b/blogicum/templates/includes/footer.html
@@ -1,5 +1,3 @@
-<footer class="container-fluid bg-light">
-  <div class="container">
-    <p class="text-center">© Блогикум</p>
-  </div>
+<footer class="border-top text-center py-3">
+  <p>© Блогикум</p>    
 </footer>
