--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,10 +1,20 @@
-<nav class="navbar navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="/">Блогикум</a>
-    <ul class="nav">
-      <li class="nav-item"><a class="nav-link" href="/">Лента записей</a></li>
-      <li class="nav-item"><a class="nav-link" href="/pages/about/">О проекте</a></li>
-      <li class="nav-item"><a class="nav-link" href="/pages/rules/">Наши правила</a></li>
-    </ul>
-  </div>
-</nav>
+<header>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/">Блогикум</a>
+      <ul class="nav">
+        {% with request.resolver_match.view_name as view_name %}
+        <li class="nav-item">
+          <a class="nav-link {% if view_name == 'blog:index' %}active{% endif %}" href="{% url 'blog:index' %}">Лента записей</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if view_name == 'pages:about' %}active{% endif %}" href="{% url 'pages:about' %}">О проекте</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if view_name == 'pages:rules' %}active{% endif %}" href="{% url 'pages:rules' %}">Наши правила</a>
+        </li>
+        {% endwith %}
+      </ul>
+    </div>
+  </nav>
+</header>
