--- a/blogicum/templates/pages/rules.html
+++ b/blogicum/templates/pages/rules.html
@@ -1,9 +1,7 @@
-{% load static %}
-
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
@@ -14,33 +12,8 @@
     <title>Наши правила</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="{% url 'blog:index' %}">
-            <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-            Блогикум
-          </a>
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'blog:index' %}">
-                Лента записей
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'pages:about' %}">
-                О проекте
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="{% url 'pages:rules' %}">
-                Наши правила
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    {% include 'includes/header.html' %}
+    
     <main>
       <div class="container py-5">
         <h1>Наши правила</h1>
@@ -68,8 +41,7 @@
         </p>
       </div>
     </main>
-    <footer class="border-top text-center py-3">
-      <p>© Блогикум</p>
-    </footer>
+
+    {% include 'includes/footer.html' %}
   </body>
 </html>
