--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -7,7 +7,7 @@
 {% block content %}
   <h1>Лента записей</h1>
   {% for post in posts %}
-  <hr>
+    <hr>
     <article>
       <ul>
         <li>Место: {{ post.location }}</li>
@@ -17,7 +17,7 @@
         </li>
       </ul>
       <p>{{ post.text|truncatewords:10 }}</p>
-      <a href="/posts/{{ post.id }}/">Читать полный текст</a>
+      <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
     </article>
   {% endfor %}
 {% endblock %}
