--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Подробная информация
+  {{ post.location }} - {{ post.date }}
 {% endblock %}
 
 {% block content %}
